# potatostack

./: .dclintrc.yaml  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .kopiaignore  .mcp.json  .pre-commit-config.yaml  .prettierrc  .trivyignore  .woodpecker.yml  .yamllint  .yamllint.yaml  01-setup-zfs.sh  02-migrate-and-update-docker.sh  ADVANCED_OPTIMIZATIONS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP-REPORT.md  CLEANUP_COMPLETE.md  CLEANUP_COMPLETE.txt  CONTRIBUTING.md  DATABASE-CONSOLIDATION.txt  DEPLOYMENT-READY.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  ENHANCEMENTS-COMPLETE.md  ENTERPRISE_GRADE_OPTIMIZATION.md  ENTERPRISE_IMPLEMENTATION_COMPLETE.md  FINAL-STATUS.md  FINAL-SUMMARY.md  FINAL_SUMMARY.txt  FINAL_TEST_RESULTS.md  FINAL_TEST_SUITE_SUMMARY.md  (+105 more)
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
config/: docker-compose-glances.yml  gateway-api.yaml  glances.conf  k3s-server.yaml  prometheus-glances.yml
docs/: AGENTS.md  ARCHITECTURE_OVERVIEW.md  ARR-STACK.md  ATUIN_GUIDE.md  AUTHELIA_SSO.md  AWESOME_SELFHOSTED_COMPARISON.md  BACKREST_SETUP.md  BEETS_GUIDE.md  CHANGELOG.md  CLASS_DIAGRAMS.md  CLEANUP-SUMMARY.txt  CLOUDFLARE_TUNNEL.md  CODE_REVIEW_VALIDATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DROIDYPASTE_SETUP.md  ENHANCEMENTS-GUIDE.md  ENHANCEMENTS.md  ENTERPRISE_ARCHITECTURE.md  FILESTASH_GUIDE.md  FINAL_TEST_SUITE_SUMMARY.md  FIREFLY-SETUP.md  FIREWALL-QUICKSTART.md  (+69 more)
(+530 files in other folders)
